# em_test_api

./: README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: b88d21a3b4d8_init_tables.py
src/api/v1/: authors.py  book.py  borrow.py  routers.py
src/core/: config.py
src/db/: __init__.py  base.py  crud.py  session.py
src/models/: common.py
src/schemas/: __init__.py  author.py  books.py  borrow.py  common.py  response.py
src/service/: author.py  book.py  borrow.py
tests/: conftest.py  init_db.py  tests.py
