[tool.poetry]
name = "em-test-api"
version = "0.1.0"
description = ""
authors = ["Alxndr <3441@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.0"
faker = "^33.1.0"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
greenlet = "^3.1.1"
orjson = "^3.10.12"
pytest-asyncio = "^0.25.0"
httpx = "0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"